小程序最近更新

--- a/webapp/404.html
+++ b/webapp/404.html
@@ -20,6 +20,12 @@
 <title>404页面</title>
 </head>
 <body>
+
+<div style="position: relative;left:0;margin: 50px auto;height:100px;width:100px;background: red;">
+	<div style="position: absolute;height: 100px;width: 100px;background: blue;top:-50px;"></div>
+</div>
+
+
 <section class="container-fluid page-404 minWP text-c">
 	<p class="error-title"><i class="Hui-iconfont va-m" style="font-size:80px">&#xe688;</i>
 		<span class="va-m"> 404</span>
