专专业业职职业业通

--- a/webapp/MBTI/ENTJ.html
+++ b/webapp/MBTI/ENTJ.html
@@ -78,7 +78,7 @@
 	<div class="page page1">
 		<img src="./logo.png" alt="logo" width="100px" height="100px"/>
 		<h1>高考选择评估报告(理科)</h1>
-		<h3>泸州源码信息 Wed Feb 20 16:37:24 CST 2019</h3>
+		<h3>张三 2019-03-06</h3>
 		<p class="tip">
 			MBTI模型源自荣格(瑞士)与Myers-Briggs(美国)。Holland理论由美国约翰∙霍普金斯大学心理学教授Holland提出。Career Anchor Theory由美国麻省理工大学斯隆商学院埃德加∙H∙施恩提出
 		</p>
@@ -121,52 +121,31 @@
 		<div>
 			<div style="position: relative;height: 280px;">
 				<div class="fl box_left">
-					<p class="bg_blue">专业门类适合度排行 <span class="fr mr15">适合指数</span></p>
+					<p class="bg_blue">专业门类适合度</p>
 					<ol>
-						<li>理学<span class="fr mr15">73</span></li>
-						<li>工学<span class="fr mr15">73</span></li>
-						<li>法学<span class="fr mr15">73</span></li>
-						<li>经济学<span class="fr mr15">73</span></li>
-						<li>管理学<span class="fr mr15">73</span></li>
-						<li>医学<span class="fr mr15">73</span></li>
-						<li>新闻学、旅游学<span class="fr mr15">73</span></li>
-						<li>哲学<span class="fr mr15">73</span></li>
-						<li>心理学<span class="fr mr15">73</span></li>
+						<li>理学</li>
+						<li>工学</li>
+						<li>法学</li>
+						<li>经济学</li>
+						<li>管理学</li>
+						<li>医学</li>
+						<li>新闻学、旅游学</li>
+						<li>哲学</li>
+						<li>心理学</li>
 					</ol>
 				</div>
 				<div class="fr box_right">
-					<p class="bg_blue">性格特点 <span class="fr mr15">性格特点指数</span></p>
+					<p class="bg_blue">性格特点 </p>
 					<ol>
-						<li>富有主见、喜欢钻研思考<span class="fr mr15">73</span></li>
-						<li>传统实际、喜欢计划与细节<span class="fr mr15">73</span></li>
-						<li>富艺术气质、喜欢感性创造<span class="fr mr15">73</span></li>
-						<li>善解人意，喜欢帮助他人<span class="fr mr15">73</span></li>
+	          <li>坦诚、具决策力的活动领导者</li>
+　          <li>长于发展与实施广泛的系统以解决组织的问题</li>
+　          <li>专精于具内涵与智能的谈话如对公众演讲</li>
+　          <li>乐于经常吸收新知且能广开信息管道</li>
+　          <li>易生过度自信，会强于表达自已创见</li>
+　          <li>喜于长程策划及目标设定
 					</ol>
 				</div>
 			</div>
-			<div style="position: relative;height: 280px;">
-				<div class="fl box_left">
-					<p class="bg_blue">学科兴趣 <span class="fr mr15">兴趣指数</span></p>
-					<ol>
-						<li>物理<span class="fr mr15">73</span></li>
-						<li>化学<span class="fr mr15">73</span></li>
-						<li>数学<span class="fr mr15">73</span></li>
-						<li>地理<span class="fr mr15">73</span></li>
-						<li>历史政治<span class="fr mr15">73</span></li>
-						<li>英语<span class="fr mr15">73</span></li>
-						<li>美术<span class="fr mr15">73</span></li>
-						<li>语文<span class="fr mr15">73</span></li>
-					</ol>
-				</div>
-				<div class="fr box_right">
-					<p class="bg_blue">人格特质</p>
-					<ol>
-						<li>您的特质：概念主义型</li>
-						<li>关键词：富想象力、独立、原则性强、善于总结、追根究底、抽象思维</li>
-					</ol>
-				</div>
-			</div>
-		</div>
 	</div>
 	<div class="page page4">
 		<h2>二、专业适合度排行</h2>
@@ -175,240 +154,10 @@
 				<tr>
 					<th>专业</th>
 					<th>专业代码</th>
-					<th>适合度指数</th>
-					<th>指数对应图表</th>
 				</tr>
 				<tr>
 					<td>地理科学类</td>
 					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 90%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>物理学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 80%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
 				</tr>
 			</table>
 		</div>
@@ -423,24 +172,12 @@
 		</p>
 		...霍兰德测试 职业兴趣表格
 		<div>
-			<h3>你的性格类型倾向：“ INTJ ”(内向 直觉 思维 判断）</h3>
-			<p class="tip">在实现自己的想法和达成自己的目标时有创新的想法和非凡的动力。能很快洞察到外界事物间的规律并形成长期
-			的远景计划。一旦决定做一件事就会开始规划并直到完成为止。多疑、独立，对于自己和他人能力和表现的要 求都非常高。
-			INTJ型的人是完美主义者。他们强烈地要求个人自由和能力，同时在他们独创的思想中，不可动摇的信仰促使他
-			们达到目标。 INTJ型的人思维严谨、有逻辑性、足智多谋，他们能够看到新计划实行后的结果。他们对自己和 别人都
-			很苛求，往往几乎同样强硬地逼迫别人和自己。他们并不十分受冷漠与批评的干扰，作为所有性格类型中最独立
-			的，INTJ型的人更喜欢以自己的方式行事。面对相反意见，他们通常持怀疑态度，十分坚定和坚决。权 威本身不能强
-			制他们，只有他们认为这些规则对自己的更重要的目标有用时，才会去遵守。 INTJ型的人是天生的谋略家，具有独特
-			的思想、伟大的远见和梦想。他们天生精于理论，对于复杂而综合的概念运转灵活。他们是优秀的战略思想家，通常
-			能清楚地看到任何局势的利处和缺陷。对于感兴趣的问题，他们是出色的、具有远见和见解的组织者。如果是他们自
-			己形成的看法和计划，他们会投入不可思议的注意力、能量和积极性。领先到达 或超过自己的高标准的决心和坚忍不
-			拔，使他们获得许多成就。
-			适合的领域有：科研、科技应用、技术咨询、管理咨询、金融、投资领域、创造性行业。如：
-			首席财政执行官、 知识产权律师、 设计工程师、 精神分析师 、 心脏病专家、 媒体策划、 网络管理员、 建筑
-			师、 管理顾问、 经济学者、 国际银行业务职员、 金融规划师、 综合网络专业人员、 各类科学家、 研究所研究人
-			员、 系统分析员 、 计算机程序员 、 研究开发部经理、 各类技术顾问、 技术专家、 投资专家、 法律顾问、 医学专
-			家、 经济学家、 投资银行研究员、 证券投资和金融分析员、 投资银行家、 财务计划人、 企业并购专家、 各类发明
-			家、 建筑师、 社论作家、 艺术家</p>
+			<h3>你的性格类型倾向：ENTJ(外倾、直觉、思维和判断)</h3>
+			<p class="tip">
+			ENTJ型的人是伟大的领导者和决策人。他们能轻易地看出事物具有的可能性，很高兴指导别人，使他们的想象成为现实。他们是头脑灵活的思想家和伟大的长远规划者。
+因为ENTJ型的人很有条理和分析能力，所以他们通常对要求推理和才智的任何事情都很擅长。为了在完成工作中称职，他们通常会很自然地看出所处情况中可能存在的缺陷，并且立刻知道如何改进。他们力求精通整个体系，而不是简单地把它们作为现存的接受而已。ENTJ型的人乐于完成一些需要解决的复杂问题，他们大胆地力求掌握使他们感兴趣的任何事情。ENTJ型的人把事实看得高于一切，只有通过逻辑的推理才会确信。
+ENTJ型的人渴望不断增加自己的知识基础，他们系统地计划和研究新情况。他们乐于钻研复杂的理论性问题，力求精通任何他们认为有趣的事物。他们对于行为的未来结果更感兴趣，而不是事物现存的状况。ENTJ型的人是热心而真诚的天生的领导者。他们往往能够控制他们所处的任何环境。因为他们具有预见能力，并且向别人传播他们的观点，所以他们是出色的群众组织者，他们往往按照一套相当严格的规律生活，并且希望别人也是如此。因此他们往往具有挑战性，同样艰难地推动自我和他人前进。
+			</p>
 		</div>
 		<div>
 			<h3> 你的人格类型： INTJ 专家型——追求能力与独立</h3>
@@ -457,15 +194,10 @@
 			</p>
 			<b>可能的盲点</b>
 			<p class="tip">
-				你只注重自己，很少去理解他人，自以为是，对他人没有耐心，总是想当然的把自己的观点强加给别人，制定不切实际的
-				高标准。你需要学会去了解别人的感受和想法，以避免你冒犯他人。
-				你过于注重远见卓识，很容易忽略和错过与自己理论模式不符的细节和现象；爱玩弄智力游戏，说些对他人没有意义、似
-				是而非的话语。你需要简化你既理论又复杂的想法，更好的与别人交流。
-				你过分独立的个性和工作习惯，使得你总是“拒绝”别人的参与和帮助，难以发现自己计划中的缺陷。建议你保持耐心，
-				多向他人请教，这样可以帮助你提早了解一些不合实际的想法，或者在大量投入之前做出必要的修正和改进。
-				你有时会过于固执和死板，沉迷于一些出色的但不重要的想法中，并且事事要求完美；如果你想成功，你需要判断事情的
-				重要性，学习接受生活并与他相处，学会放弃。
-			</p>
+			由于ENTJ型的人渴望向下一个目标挑战，或向更大的目标前进，所以有时他们草率地做决定。偶尔放慢速度会有机会收集所有相关的资料，考虑行为的实际后果和有关个人的后果。他们一旦做出决定就立刻行动，而不是停下来重新检查细节和形势的现实情况。
+因为ENTJ型的人按照很条理的方式生活．所以当他们无法理解别人的需求和情感的理由时，就会对这些情感显得粗鲁、迟钝、缺乏耐心和麻木。ENTJ型的人好争论，难以接近?经常不欢迎别人清楚明白的建议，他们与其等着接受必然的批评，不如去聆听周围人们的情况，并对周围人的贡献表示感激。事实上作为一条原则，ENTJ型的人应该有意识地努力，在确信自己的想法之前，停下来去聆听别人的意见，从而避免武断专横的行为。
+ENTJ型的人承认忽略或不表达自己的情感时，发现自己在感情上反应激烈。如果他们发现某个人，尤其是他们尊敬的人，对他们的能力表示疑问时，更容易感情激动。他们对貌似无足轻重的情况会有粗暴的反应，这种爆发会伤害接近他们的事物。当ENTJ型的人给自己时间去考虑和理解自己真正的感觉如何时，会更加快乐和引人注目。与其任情感左右自己的人格类型，不如给感情一个积极的发泄途径，这样才会真正地充分控制感情，从而处于一种愉快和力求达到的境界。令人惊讶的是，ENTJ型的人实际上不如他们自信的风度所表现的那样老练和有能力。允许自己从别人那里得到合理而有价值的帮助，他们将会增加个人的能力和成功的机率。
+		</p>
 			<h3>对你的建议</h3>
 			<div>
 				<b>社交方面：</b>
@@ -490,49 +222,6 @@
 			</div>
 		</div>
 		<div>
-			<h3>学科兴趣</h3>			
-			<p class="tip">
-				追求兴趣是人生的内驱力之一，也是生命本身的意义。
-				对于一门学科，如果对它本身有兴趣，我们的学习效率会很高。对于要上大学选择专业的考生而言，要选择的学科门
-				类很多，自然必须先了解：自己最喜欢哪些学科？这些学科是稳定的还是暂时的？ 从高中生这个年龄阶段来看，兴趣开
-				始逐渐从广泛到狭窄，甚至有些人已经固定，兴趣的稳定性开始增强，大致倾向性已经比较明确。而学习每一种专业都和
-				学生在高中阶段对各门学科的学习情况、对学科的感兴趣情况是相关的。如：生物感兴趣的学生，可能憧憬着学习生物科
-				学、生态学或医学；对语文感兴趣的学生，可能会希望报考中文专业，等等。所以，根据学科兴趣来选择专业就非常重
-				要，而且有较高参考价值。
-									
-			</p>
-			<table cellpadding="0" cellspacing="0">
-				<tr>
-					<th>专业</th>
-					<th>专业代码</th>
-					<th>适合度指数</th>
-					<th>指数对应图表</th>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 90%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>物理学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 80%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-			</table>
 			<p class="tip">
 				测评报告向你展示一些与高中课程相对应的专业供你去参考选择，一般对数学、物理、化学要求高的专业为“文偏
 				理“的专业，对语文、英语、历史要求高的专业为“理偏文”的专业。让同学们了解专业的同时，给你提供一种选专业的
