--- a/webapp/MBTI/INTJ.html
+++ b/webapp/MBTI/INTJ.html
@@ -121,48 +121,26 @@
 		<div>
 			<div style="position: relative;height: 280px;">
 				<div class="fl box_left">
-					<p class="bg_blue">专业门类适合度排行 <span class="fr mr15">适合指数</span></p>
+					<p class="bg_blue">专业门类适合度</p>
 					<ol>
-						<li>理学<span class="fr mr15">73</span></li>
-						<li>工学<span class="fr mr15">73</span></li>
-						<li>法学<span class="fr mr15">73</span></li>
-						<li>经济学<span class="fr mr15">73</span></li>
-						<li>管理学<span class="fr mr15">73</span></li>
-						<li>医学<span class="fr mr15">73</span></li>
-						<li>新闻学、旅游学<span class="fr mr15">73</span></li>
-						<li>哲学<span class="fr mr15">73</span></li>
-						<li>心理学<span class="fr mr15">73</span></li>
+						<li>理学</li>
+						<li>工学</li>
+						<li>法学</li>
+						<li>经济学</li>
+						<li>管理学</li>
+						<li>医学</li>
+						<li>新闻学、旅游学</li>
+						<li>哲学</li>
+						<li>心理学</li>
 					</ol>
 				</div>
 				<div class="fr box_right">
-					<p class="bg_blue">性格特点 <span class="fr mr15">性格特点指数</span></p>
+					<p class="bg_blue">性格特点 </p>
 					<ol>
-						<li>富有主见、喜欢钻研思考<span class="fr mr15">73</span></li>
-						<li>传统实际、喜欢计划与细节<span class="fr mr15">73</span></li>
-						<li>富艺术气质、喜欢感性创造<span class="fr mr15">73</span></li>
-						<li>善解人意，喜欢帮助他人<span class="fr mr15">73</span></li>
-					</ol>
-				</div>
-			</div>
-			<div style="position: relative;height: 280px;">
-				<div class="fl box_left">
-					<p class="bg_blue">学科兴趣 <span class="fr mr15">兴趣指数</span></p>
-					<ol>
-						<li>物理<span class="fr mr15">73</span></li>
-						<li>化学<span class="fr mr15">73</span></li>
-						<li>数学<span class="fr mr15">73</span></li>
-						<li>地理<span class="fr mr15">73</span></li>
-						<li>历史政治<span class="fr mr15">73</span></li>
-						<li>英语<span class="fr mr15">73</span></li>
-						<li>美术<span class="fr mr15">73</span></li>
-						<li>语文<span class="fr mr15">73</span></li>
-					</ol>
-				</div>
-				<div class="fr box_right">
-					<p class="bg_blue">人格特质</p>
-					<ol>
-						<li>您的特质：概念主义型</li>
-						<li>关键词：富想象力、独立、原则性强、善于总结、追根究底、抽象思维</li>
+						<li>富有主见、喜欢钻研思考</li>
+						<li>传统实际、喜欢计划与细节</li>
+						<li>富艺术气质、喜欢感性创造</li>
+						<li>善解人意，喜欢帮助他人</li>
 					</ol>
 				</div>
 			</div>
@@ -175,240 +153,10 @@
 				<tr>
 					<th>专业</th>
 					<th>专业代码</th>
-					<th>适合度指数</th>
-					<th>指数对应图表</th>
 				</tr>
 				<tr>
 					<td>地理科学类</td>
 					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 90%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>物理学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 80%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>海洋科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 60%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 50%;height: 25px;background:#99ccff"></div>
-					</td>
 				</tr>
 			</table>
 		</div>
@@ -490,49 +238,6 @@
 			</div>
 		</div>
 		<div>
-			<h3>学科兴趣</h3>			
-			<p class="tip">
-				追求兴趣是人生的内驱力之一，也是生命本身的意义。
-				对于一门学科，如果对它本身有兴趣，我们的学习效率会很高。对于要上大学选择专业的考生而言，要选择的学科门
-				类很多，自然必须先了解：自己最喜欢哪些学科？这些学科是稳定的还是暂时的？ 从高中生这个年龄阶段来看，兴趣开
-				始逐渐从广泛到狭窄，甚至有些人已经固定，兴趣的稳定性开始增强，大致倾向性已经比较明确。而学习每一种专业都和
-				学生在高中阶段对各门学科的学习情况、对学科的感兴趣情况是相关的。如：生物感兴趣的学生，可能憧憬着学习生物科
-				学、生态学或医学；对语文感兴趣的学生，可能会希望报考中文专业，等等。所以，根据学科兴趣来选择专业就非常重
-				要，而且有较高参考价值。
-									
-			</p>
-			<table cellpadding="0" cellspacing="0">
-				<tr>
-					<th>专业</th>
-					<th>专业代码</th>
-					<th>适合度指数</th>
-					<th>指数对应图表</th>
-				</tr>
-				<tr>
-					<td>地理科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 90%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>物理学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 80%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-				<tr>
-					<td>生物科学类</td>
-					<td>066666</td>
-					<td>72.9</td>
-					<td>
-						<div style="width: 70%;height: 25px;background:#99ccff"></div>
-					</td>
-				</tr>
-			</table>
 			<p class="tip">
 				测评报告向你展示一些与高中课程相对应的专业供你去参考选择，一般对数学、物理、化学要求高的专业为“文偏
 				理“的专业，对语文、英语、历史要求高的专业为“理偏文”的专业。让同学们了解专业的同时，给你提供一种选专业的
