--- a/webapp/MBTI/ENFP.html
+++ b/webapp/MBTI/ENFP.html
@@ -149,26 +149,202 @@
 					<th>专业</th>
 					<th>专业代码</th>
 				</tr>
-				<tr>
-					<td>新闻学</td>
-					<td>050301</td>
-				</tr>
-				<tr>
-					<td>戏剧学</td>
-					<td>130302</td>
-				</tr>
-				<tr>
-					<td>市场营销</td>
-					<td>120202</td>
-				</tr>
-				<tr>
-					<td>工商企业管理</td>
-					<td>620501</td>
-				</tr>
-				<tr>
-					<td>教育学</td>
-					<td>040101</td>
-				</tr>
+         <tr>
+           <td>新闻学</td>
+           <td>050301</td>
+         </tr>
+         <tr>
+           <td>新闻采编与制作</td>
+           <td>670308</td>
+         </tr>
+         <tr>
+           <td>网络新闻与传播</td>
+           <td>670316</td>
+         </tr>
+         <tr>
+           <td>戏剧学</td>
+           <td>130302</td>
+         </tr>
+         <tr>
+           <td>戏剧影视导演</td>
+           <td>130306</td>
+         </tr>
+         <tr>
+           <td>戏剧影视表演</td>
+           <td>670209</td>
+         </tr>
+         <tr>
+           <td>音乐学</td>
+           <td>130202</td>
+         </tr>
+         <tr>
+           <td>音乐表演</td>
+           <td>130201</td>
+         </tr>
+         <tr>
+           <td>广播电视学</td>
+           <td>050302</td>
+         </tr>
+         <tr>
+           <td>广播电视工程</td>
+           <td>080707</td>
+         </tr>
+         <tr>
+           <td>广播电视编导</td>
+           <td>130305</td>
+         </tr>
+         <tr>
+           <td>广播电视技术</td>
+           <td>670301</td>
+         </tr>
+         <tr>
+           <td>室内设计技术</td>
+           <td>560104</td>
+         </tr>
+         <tr>
+           <td>室内艺术设计</td>
+           <td>670136</td>
+         </tr>
+         <tr>
+           <td>装潢设计与工艺教育</td>
+           <td>040330</td>
+         </tr>
+         <tr>
+           <td>动画</td>
+           <td>130310</td>
+         </tr>
+         <tr>
+           <td>艺术设计学</td>
+           <td>130501</td>
+         </tr>
+         <tr>
+           <td>艺术教育</td>
+           <td>660242</td>
+         </tr>
+         <tr>
+           <td>艺术设计</td>
+           <td>670101</td>
+         </tr>
+         <tr>
+           <td>产品艺术设计</td>
+           <td>670102</td>
+         </tr>
+         <tr>
+           <td>市场管理与服务</td>
+           <td>620511</td>
+         </tr>
+         <tr>
+           <td>市场营销</td>
+           <td>120202</td>
+         </tr>
+         <tr>
+           <td>市场营销</td>
+           <td>620401</td>
+         </tr>
+         <tr>
+           <td>市场营销类其他专业</td>
+           <td>620499</td>
+         </tr>
+         <tr>
+           <td>工商企业管理</td>
+           <td>620501</td>
+         </tr>
+         <tr>
+           <td>信息传播与策划</td>
+           <td>670312</td>
+         </tr>
+         <tr>
+           <td>文化创意与策划</td>
+           <td>660153</td>
+         </tr>
+         <tr>
+           <td>广告策划与营销</td>
+           <td>620407</td>
+         </tr>
+         <tr>
+           <td>教育学</td>
+           <td>040101</td>
+         </tr>
+         <tr>
+           <td>科学教育</td>
+           <td>040102</td>
+         </tr>
+         <tr>
+           <td>人文教育</td>
+           <td>040103</td>
+         </tr>
+         <tr>
+           <td>教育技术学</td>
+           <td>040104</td>
+         </tr>
+         <tr>
+           <td>应用心理学</td>
+           <td>071102</td>
+         </tr>
+         <tr>
+           <td>心理学</td>
+           <td>071102</td>
+         </tr>
+         <tr>
+           <td>临床医学</td>
+           <td>100201</td>
+         </tr>
+         <tr>
+           <td>基础医学</td>
+           <td>100125</td>
+         </tr>
+         <tr>
+           <td>社会学</td>
+           <td>030301</td>
+         </tr>
+         <tr>
+           <td>医学营养</td>
+           <td>630407</td>
+         </tr>
+         <tr>
+           <td>营养配餐</td>
+           <td>640204</td>
+         </tr>
+         <tr>
+           <td>烹饪与营养教育</td>
+           <td>082708</td>
+         </tr>
+         <tr>
+           <td>食品卫生与营养学</td>
+           <td>100402</td>
+         </tr>
+         <tr>
+           <td>食品营养与卫生</td>
+           <td>610318</td>
+         </tr>
+         <tr>
+           <td>基础医学</td>
+           <td>100110</td>
+         </tr>
+         <tr>
+           <td>行政管理</td>
+           <td>120402</td>
+         </tr>
+         <tr>
+           <td>行政管理</td>
+           <td>650203</td>
+         </tr>
+         <tr>
+           <td>人力资源管理</td>
+           <td>120206</td>
+         </tr>
+         <tr>
+           <td>人力资源管理</td>
+           <td>650204</td>
+         </tr>
+         <tr>
+           <td>管理科学</td>
+           <td>120106</td>
+         </tr>
+         <tr>
+           <td>管理科学</td>
+           <td>120101</td>
+         </tr>
 			</table>
 		</div>
 	</div>
@@ -349,5 +525,302 @@ ENFP型人通常是出色的思维广阔的思想家，他们能很容^地看出
 ENFP型人是天生的企业家!他们喜欢给自己干活，因为这给予他们自由和灵活，也让他们有机会选择想做的工作以及想合作的人。他们通常极富想法并想付诸实现，尤其是那些将影响其他人的。许多ENFP型人喜欢在建立合作组、解决冲突或提高工作效率等方面作顾问。他们也喜欢成为独立的销售员，尤其是销售。传统的商业世界通常对于ENFP型人没有吸引力，因为他们不喜欢过多的规则、规定或标准操作程序。然而，在传统的机构中，ENFP型人群集中于人力资源部做培训员及顾问。他们发现诸如雇员发展顾问这样的职业可以运用他们事先谋划并提出利于人们完成工作的创造性方法的能力，同时还能不忘机构的目标。记住，上述只是可以为具有独特天分的ENFP型人提供满足感的一部分职业领域。<br/>
 		</div>
 	</div>
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>新闻学</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：050301学制：四年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						新闻学是研究新闻事业和新闻工作规律的科学。新闻学是以人类社会客观存在的新闻现象作为自己的研究对象，研究的重点是新闻事业和人类社会的关系，探索新闻事业的产生、发展的特殊规律和新闻工作的基本要求的一门科学。它研究的内容是新闻理论、新闻史和新闻业务。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						新闻学专业培养的是具备系统的新闻理论知识与技能、宽广的文化与科学知识，熟悉我国新闻、宣传政策法规，能在新闻、出版与宣传部门从事编辑、记者与管理等工作的新闻学高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					该专业学生主要学习马克思主义基本原理和新闻学基本理论和基础知识，受到新闻业务的基本训练，具有社会活动和科研的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					新闻学概论、中国新闻事业史、外国新闻事业、新闻采访与写作、新闻编辑与评论、马列新闻论著选读、中国历代文学作品选读、大众传播学、新闻法规与新闻职业道德、新闻摄影、广播电视学、新闻事业管理、广告学与公共关系学等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>戏剧学</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130302学制：四年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						戏剧学是一门新兴学科，属于艺术学下的一个本科专业。本专业培养具备戏剧和影视的理论、评论、编辑和艺术管理等力面的知识。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						本专业培养具备戏剧和影视的理论、评论、编辑和艺术管理等力面的知识，能在剧院(团)或电视台、电影厂、编辑部以及文化管理机关等部门从事理论研究、编审与文化管理等方面工作以及能在国家机关、文教事业单位从事实际工作的高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					本专业学生应具有扎实的马克思主义的基本理论，熟悉我国的文艺方针、政策，系统地掌握戏剧、影视文学的基本理论和创作技能，了解相关学科的知识，有较好的文化艺术修养，较强的审美感觉和创造性思维；具有较系统和广博的戏剧影视理论和历史知识，掌握分析和研究戏剧影视作品的方法，有较强的理论写作能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					导演学、表演艺术、舞台美术设计基础、中外戏剧史、艺术概论等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>戏剧影视导演</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130306学制：四年 授予学位：艺术学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						导演专业是培养具备戏剧、戏曲导演、电影、电视剧导演和戏剧理论研究能力的人才的专业，包括戏曲导演、戏剧导演和影视导演等几个学习方向。“导演”的本义就是演出的组织者、解释者和演员的镜子，导演的出现也只是19世纪70年代，而学校教育中的导演产生出现要再晚一些。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						戏剧影视导演专业培养具备戏剧、戏曲和影视文学基本理论及剧本创作能力，能在剧院(团)或电视台、电影厂、编辑部等部门从事文学创作、编辑和影视导演的工作，以及在国家机关、文教事业单位从事实际工作的高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					戏剧影视导演专业学生主要学习马克思主义的基本理论，熟悉我国的文艺、政策，系统地掌握戏剧、戏曲影视文学的基本理论和创作技能，有较强的观察、理解、概括生活的能力，有较强的剧本创作能力，及较强的文艺编导能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					录音基础、音乐基础、视听语言、美学、色彩学、艺术概论、中外电影史、美术作品分析、中外文学、影视导演基础、影视剧创作、影视大师作品读解、影视精品赏析、绘画基础。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>音乐学</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130202学制：四年或五年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						音乐学是研究音乐的所有理论学科的总称；音乐学在不同时期的研究对象和侧重点是不同的，音乐学除了基本的研究对象外，还研究历史和现在的一切个人和民族的音乐行为，即音乐的生理行为、创造行为、表演行为、审美行为、接受行为、和学习行为。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						该专业培养具有一定的马克思主义基本理论素养和系统的专业基本知识，具备一定音乐实践技能和教学能力，能在高、中等专业或普通院校、社会文艺团体、艺术研究单位和文化机关、出版及广播、影视部门从事教学、研究、编辑、评论、管理等方面工作的高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					音乐学专业学生主要学习音乐史论、音乐教育等方面的基本理论和基础知识，接受音乐理论与实践方面的基本训练，具有音乐研究、教学等方面的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					音乐史、音乐学理论、中外民族民间音乐、教育学、美学、作曲技术理论、钢琴或其他乐器演奏等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>音乐表演</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130201学制：四年或五年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						音乐表演是音乐的再创作活动。通过乐器的演奏，人声的歌唱，以及包括指挥在内的多种艺术手段，将乐曲用具体可感的音响表现出来，传达给听众，以发挥其社会功能。它是音乐创作与音乐欣赏的中介，是音乐活动中不可缺少的环节。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						音乐表演专业培养具有音乐表演的专业知识和艺术素养，掌握音乐表演专业技能的高级技术应用性专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					掌握该专业的基本理论、基本知识；掌握音乐作品的分析方法；具有演绎不同风格及体裁的音乐作品的能力；了解党和国家的文艺方针、政策和法规；了解该专业及相关学科的发展动态；掌握文献、资料查询的基本方法，具有初步科学研究能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					声乐、钢琴、基本乐理、视唱练耳、舞台表演、合唱与指挥、形态与舞蹈、曲式与作品分析等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>广播电视学</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：050302学制：四年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						广播电视在未来数十年内将继续呈蓬勃发展之势，电视与报刊、广播等媒体相比具有一定优势，因此广播电视学备受人们的关注。广播电视新闻业仍是人们生活中不可或缺的一部分。中国传媒在未来数十年内将继续呈蓬勃发展之势明显，虽然即将迎来因特网的强劲挑战，但未来的传媒业，不可能让某一模式独占鳌头。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						本专业培养具有广播电视新闻学基本理论和宽广的文化科学知识，能在广播电视新闻宣传部门，从事编辑、采访、节日主持与管理等工作的新闻传播学高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					本专业学生主要学习马克思主义基本原理和新闻学、广播电视学、以及与广播电视有关学科的基本理论和基础知识，受到广播电视新闻采访、写作、编导、播音、节日主持等方面的基本训练，具有广播电视节日策划、编辑、采访、管理等方面的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					广播电视概论、广播电视技术基础、广播电视新闻采访与写作、广播电视节目策划、广播电视编辑、广播电视节目制作、电视专题与电视栏目、电视摄像技术、广播电视史、广播电视法规与广电职业道德、视听语言、影视艺术概论。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>广播电视工程</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：080707学制：四年 授予学位：工学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						该专业立足广播影视传媒行业，面向媒体内容处理相关领域，运用计算机软件与现代电子技术等信息处理手段，着重于视音频处理、信源压缩、影视制作与节目管理、节目播出与分发等，具有基础理论与工程实践并重，艺术与技术相结合的特色。主要是以视音频技术为核心，并与计算机科学、通信技术、网络技术、视听艺术等学科融合的复合型专业，重点培养广播电视行业所需要的高素质综合型专业技术人才。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						广播电视工程专业培养具有扎实的学科基础和专业基础知识，具备数字电视技术、网络视音频技术及数字影视制作技术等方面的专业知识与技能，具有一定的创新能力和较强的实践能力，能在传媒领域中从事数字电视技术和网络视音频技术的研究、系统设计、开发与应用，并可从事技术与艺术结合的影视制作、动画制作等方面的高级技术人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					该专业主要学习广播电视技术、多媒体技术以及相关基础理论等方面的知识，能在广播电视系统和相关部门从事设备维护、使用和管理等方面的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					数字信号处理、通信原理、信息论与编码原理、计算机网络、数字电视技术、数字视频系统设计、音频播控技术、数字动画制作技术等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>广播电视编导</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130305学制：四年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						广播电视编导是近年新兴的一个专业，属于艺术类专业。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						广播电视编导专业培养具备广播电视节目策划、创作、制作等方面的专业知识、具备较高的政治水平、理论修养和艺术鉴赏等方面的能力，能在全国广播电影电视系统和文化部门从事广播、电视节目编导、艺术摄影、音响设计、音响导演、撰稿、编剧、制作、社教及文艺类节目主持人等方面工作的广播电视艺术学科的高级专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					广播电视编导专业学生主要学习艺术、文学、美学、广播电视艺术学等方面的基本理论和基本知识，受到广播电视节目编导、策划、制作、主持等方面的基本训练，掌 握创作、管理广播、电视节目、栏目、频道等方面的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					传播学、传媒艺术概论、播音与主持、电视艺术概论、戏剧艺术概论、中国戏曲、影视作品分析、视听语言。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>装潢设计与工艺教育</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：040330学制：四年 授予学位：教育学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						装潢设计与工艺教育专业，英文名是Decoration design and Technology Education，是大学里的一门专业，主干学科是工艺美术。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						本专业培养德、智、体、美等全面发展，具有一定的政治觉悟，良好的道德素养、较高的专业理论和业务技能水平。能适应现代装潢设计事业的需要，有从事本专业的业务工作能力和适应相邻专业业务工作的基本能力和素质。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					培养具有本专业的基本理论、设计思想方法和专业技能等多方面的知识修养，能够独立获取知识、提出问题，分析问题和解决专业设计问题的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					素描，色彩写生，平面构成，色彩构成，立体构成，装饰画，标志设计，书籍装帧，装潢CAD，广告设计，包装设计，室内设计，CI设计
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>动画</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130310学制：四年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						动画作为一门独立的综合艺术形式已经成为各国大力重视的创意文化产业的重要方面之一。动画的概念不同于一般意义上的动画片，动画是一种综合艺术，它是集合了绘画、漫画、电影、数字媒体、摄影、音乐、文学等众多艺术门类于一身的艺术表现形式。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						本专业培养具备动画、电影、电视、创作所需要的基础知识及理论，能在动画、电影、电视等媒体的制作岗位上，从事动画原画、动画创意设计和编导及三维电脑动画创作理论研究方面的专业人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					本专业学生主要学习电影、电视、动画创作的基础知识与基本理论，受到动画设计、动画技法、动画制作的基本训练，掌握动画设计、动画编导、动画创作及理论研究的基本能力。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					影视剧作、影视声音、动画技法、影视动画创作、多媒体技术及应用、动画设计，动画导演等。
+			</p>
+			</div>
+
+			
+
+				<div style="margin: 0 auto;width: 50%;text-align: center;">
+				<h3>艺术设计学</h3>
+			</div>
+				<b>专业信息：</b>
+				<p clas="tip">
+						专业代码：130501学制：四年或五年 授予学位：文学学士
+			</p>
+				<b>专业简介：</b>
+				<p clas="tip">
+						设计艺术学是中国大陆学科门类名称。此学科于1998年被国务院学位委员会列为“艺术学”一级学科门类下的二级学科。该名称对应于英文的“Design”，在大陆艺术学界常常被简称为“设计”或“艺术设计”。
+			</p>
+				<b>培养目标：</b>
+				<p clas="tip">
+						艺术设计学专业培养具备艺术设计学教学和研究等方面的知识和能力，能在艺术设计教育、研究、设计、出版和文博等单位从事艺术设计学教学、研究、编辑等方面工作的专门人才。
+			</p>
+			<b>专业要求：</b>
+			<p clas="tip">
+					该专业学生主要学习艺术设计学方面的基本理论和基本知识，使学生通过艺术设计理论思维能力、造型艺术基础及设计原理与力法的基本训练，具备了解艺术设计的历史、现状和进行理论研究的基本素质。
+			</p>
+			<b>主干课程：</b>
+			<p clas="tip">
+					艺术设计概论、艺术设计学、中国艺术设计史、外国艺术设计史、中国工艺美术史、外国工艺美术史、艺术考古学、艺术设计基础等。
+			</p>
+			</div>
+
+			
 </body>
 </html>
